<resources>
    <string name="app_name">ActivityRecognition</string>
    
    <string name="window_length">Window Length (sec)</string>
    <string name="overlapping">Overlapping (%)</string>
    <string name="limit">Limit (min)</string>
    <string name="save_as_arff">Save as ARFF</string>

    <string name="value_window_length">4</string>
    <string name="value_overlapping">50</string>
    <string name="value_limit">0</string>

    <string name="saving">Saving..</string>
    <string name="arff">ARFF</string>
    <string name="smartwatch">Smartwatch</string>
    <string name="couldnt_get_predictions">Couldn\'t get predictions from the smartwatch.</string>
</resources>
